--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
+    "icons": "^1.0.0",
+    "markdown-to-jsx": "^6.10.2",
+    "material": "^0.3.13",
+    "material-ui": "^0.20.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^4.0.0",
+    "react-scripts": "3.0.1",
+    "ui": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
